2005-05-17  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Convert all entry and exit messages to Traffic messages
	so they can be hidden with the 'Hide Entry/Exit Messages' menu.
	Factor out common code for parsing live and history messages.
	[Patch 1198196]
	* tkchat.tcl: Automatic cleanup of nicks in the .tkchatrc file that
	are older than 30 days. [Patch 1196567]
	* tkchat.tcl: Remove import of tile:: namespace now that we require
	Tile 0.5. [Patch 1196561]

2005-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch #1196561 from Daniel South to remove
	the Tk 8.3 compatability code now that we require Tk 8.4.
	* tkchat.tcl: Applied patch #1196564 from Daniel South to clean up
	a tile warning produced by recent tile.

2005-05-04  Kevin Kenny  <kennykb@acm.org>

	* tkchat.tcl:  Corrected an interaction between the whiteboard
	and TIP #132 formatting of floating point numbers (Arguably
	a bug in the whiteboard code).
	
2005-05-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added additional icons to show extended-away state.
	* tkchat.tcl: Fixed support for tklib's as style package.

2005-04-27  Reinhard Max  <max@suse.de>

	* tkchat.tcl: /msg and /chat now also work with arbitrary JIDs.

2005-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: More fixes to the system tray icon stuff. Tested on
	linux and windows now.

2005-04-25  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Fixed the latest additions to not break execution on
	non-Windows platforms.

2005-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch #1187190 by Daniel South which fixes
	updating the system tray icon when the application regains focus
	on windows.
	* tkchat.tcl: Applied patch #1187273 by Daniel South to fix
	restoring a hidden app window to the pre-hidden state.

2005-04-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
