@@ -1,3 +1,8 @@
+2005-05-21  Daniel South  <wildcard_25@users.sourceforge.net>
+
+	* tkchat.tcl: Corrected two oversights from last commit. Fixed
+	multiline messages and initial history load times.
+
 2005-05-17  Daniel South  <wildcard_25@users.sourceforge.net>
 
 	* tkchat.tcl: Convert all entry and exit messages to Traffic messages
